<resources>
    <string name="app_name">Avaliacao Widgets</string>
    <string name="welcome_message">Bem vindo ao menu principal, clique em mim para acessar o hub</string>
    <string name="hub_text">Bem vindo ao hub, selecione que tipo de widget deseja ver</string>
    <string name="choice_button">Ver exemplo</string>

    <string-array name="widgets_array">
        <item>AutoCompleteTextView</item>
        <item>ImageView and ImageButton</item>
        <item>EditText RadioButton CheckBox</item>
        <item>!ProgressDialog</item>
    </string-array>

    <string-array name="provincias_array">
        <item>Luanda</item>
        <item>Cabinda</item>
        <item>Zaire</item>
        <item>Bengo</item>
        <item>Lunda-Sul</item>
        <item>Lunda-Norte</item>
        <item>Kwanza-Sul</item>
        <item>Kwanza-Norte</item>
        <item>Cuando cubango</item>
        <item>Moxico</item>
        <item>Bié</item>
        <item>Malanje</item>
        <item>Benguela</item>
        <item>Cunene</item>
        <item>Uíge</item>
        <item>Huambo</item>
        <item>Huíla</item>
        <item>Namibe</item>
    </string-array>

    <string name="image_description">Bugdroid image</string>
    <string name="image_button_description">Button with the bugdroid button</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="m">Masculino</string>
    <string name="f">Feminino</string>
    <string name="sexo">Sexo</string>
    <string name="subscrever_newsletter">Subscrever newsletter</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="nonsense_form">Nonsense form</string>

    <string name="processing_something_amazing">Processando algo incrível, espere pra ver</string>
</resources>